<resources>
    <string name="app_name">IamIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home">MainHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="attendance">Attendance</string>
    <string name="news">News</string>
    <string name="placements">Placements</string>
    <string name="departments">Departments</string>
    <string name="facilities">Facilities</string>
    <string name="academics">Academics</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
</resources>
